Bug 147182 - FILEEDIT ODT Track changes: accept/reject only first cell of a table selection
Summary: FILEEDIT ODT Track changes: accept/reject only first cell of a table selection
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.4.0 target:7.3.1
Keywords: implementationError
Depends on:
Blocks: Track-Changes-Table
  Show dependency treegraph
 
Reported: 2022-02-04 11:43 UTC by NISZ LibreOffice Team
Modified: 2022-05-26 08:22 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Example file from Writer with a table (10.14 KB, application/vnd.oasis.opendocument.text)
2022-02-04 11:44 UTC, NISZ LibreOffice Team
Details
First screenshot (3.65 KB, image/jpeg)
2022-02-04 11:44 UTC, NISZ LibreOffice Team
Details
Second screenshot (3.62 KB, image/jpeg)
2022-02-04 11:45 UTC, NISZ LibreOffice Team
Details
Test file with tracked changes (13.36 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2022-02-10 12:05 UTC, László Németh
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2022-02-04 11:43:20 UTC
Description:
Accept/reject only the change of the first cell in the table selection instead of all.
On the first image  you can see that we select the whole table, where all four cells are deleted. After Accept Changes, the second image shows that only the contents of the first cell have been accepted. For selections in plain text (not in tables), all of them accepted/rejected, as requested.

Steps to Reproduce:
    1. Open attached file
    2. Select the table by Table→Select→Table
    3. Accept all change

Actual Results:
It only accepts the change in first cell

Expected Results:
It should accept all changes


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 5c138ac6a8334825ef171ac6291b66b277eb4288
CPU threads: 8; OS: Windows 10.0 Build 18363; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: CL
Comment 1 NISZ LibreOffice Team 2022-02-04 11:44:25 UTC
Created attachment 178046 [details]
Example file from Writer with a table
Comment 2 NISZ LibreOffice Team 2022-02-04 11:44:46 UTC
Created attachment 178048 [details]
First screenshot
Comment 3 NISZ LibreOffice Team 2022-02-04 11:45:04 UTC
Created attachment 178049 [details]
Second screenshot
Comment 4 Commit Notification 2022-02-09 20:40:30 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/23846867ea32667ccf328c36142394dd6aaee8ba

tdf#147182 sw: accept/reject all changes of a table selection

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2022-02-10 08:37:54 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/d4a503a030706bf609e498e25888d400cc5aaefa

tdf#147182 sw: accept/reject all changes of a table selection

It will be available in 7.3.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 László Németh 2022-02-10 12:05:04 UTC
Created attachment 178186 [details]
Test file with tracked changes
Comment 7 László Németh 2022-02-10 12:05:50 UTC
Comment on attachment 178046 [details]
Example file from Writer with a table

(missing tracked changes in the file, a better test file was attached previously)
Comment 8 NISZ LibreOffice Team 2022-03-08 07:28:53 UTC
Verified in
Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 6adabd915d931b845fcf2fef15fbf3fca14ec9b3
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: threaded