tdf#147182 sw: accept/reject all changes of a table selection

instead accept/reject only text changes of the first cell
of the table selection choosing Accept Track Change/Reject
Track Change.

This way it's possible to accept/reject also all tracked row
deletions/insertions in the selected table rows.

Change-Id: I11e71075f4144bba86dda690ec712a24ccf815dd